# A-Novel-API-for-Explainable-Deep-Learning-Models

./: .gitattributes  README.md  requirements.txt
example-app/: CMakeLists.txt  example-app.cpp
example-endtoend/: CMakeLists.txt  example-endtoend.cpp
explainable/: ExplainableNode.py  run.py  train.py
explainable/models/: SimpleMLP.py  resnet.py
func/: f_DILI.py
graph code/: 1208_DILI_att_back.ipynb  1208_DILI_att_back_forward.ipynb  1208_DILI_att_forward.ipynb  1208_DILI_seed.ipynb  readme.md
libtorch/: build-hash  build-version
libtorch/include/ATen/: RedispatchFunctions.h  RegistrationDeclarations.h  VmapGeneratedPlumbing.h
